...
                  horizontal: 10,
                  vertical: 8,
                ),
              ),
              onPressed: onSendOtp,
              child: const Text(
                "Send OTP",
                style: TextStyle(fontSize: 12),
              ),
            ),
          ],
        ),
      ),
...
